Fixed merged conflict and changed naming for legacy transaction and legacy message